Removed unused import, removed some messy looking code.